[tool.poetry]
name = "pyview-web"

packages = [
  { include = "pyview" },
]

version = "0.7.1"
description = "LiveView in Python"
authors = ["Larry Ogrodnek <ogrodnek@gmail.com>"]
license = "MIT"
readme = "readme.md"
homepage = "https://pyview.rocks"
repository = "https://github.com/ogrodnek/pyview"
keywords = ["web", "api", "LiveView"]

classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: Pydantic",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
starlette = "^0.50.0"
wsproto = "^1.3.0"
APScheduler = "^3.11.0"
markupsafe = "^3.0.2"
itsdangerous = "^2.2.0"
pydantic = "^2.11"
click = "^8.1.7"

[tool.poetry.scripts]
pv = "pyview.cli.main:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.14.0"
pyright = "^1.1.403"
pytest-cov = "^6.1.1"
pytest-asyncio = "^1.3.0"

[tool.poetry.group.profiling.dependencies]
scalene = {version = "^1.5.51", python = "!=3.11.0,>=3.11"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
exclude = [
    ".venv",
    "examples",
    "examples/.venv",
    "**/vendor",
    "**/node_modules",
    "**/__pycache__",
    # T-string files require Python 3.14+
    "tests/test_live_view_template.py",
    "tests/test_template_view.py",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    # T-string files require Python 3.14+ syntax
    "pyview/template/__init__.py",
    "pyview/template/template_view.py",
    "pyview/template/live_view_template.py",
    "examples/views/count/count_tstring.py",
    "tests/test_live_view_template.py",
    "tests/test_template_view.py",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "UP007",  # use-pep604-annotation (Union[X, Y] -> X | Y)
    "UP035",  # deprecated-import (keep typing.Iterator instead of collections.abc.Iterator)
    "UP045",  # non-pep604-annotation (keep Optional[X] instead of X | None)
    "N802",   # mixed case function names
    "N803",   # mixed case variable
    "N806",   # mixed case variable in function
    "N815",   # mixed case attributes
    "N818",   # exception naming (keep AuthException, not AuthError)
    "N999",   # invalid module name (allow PascalCase module names)
    "SIM108", # prefer if-else blocks over ternary operators for readability
]

[tool.ruff.lint.isort]
known-first-party = ["pyview"]

[tool.ruff.lint.per-file-ignores]
"pyview/vendor/**" = ["E722", "F811", "N818", "SIM102", "SIM103", "SIM118", "UP031"]  # Ignore vendored code issues

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
