[project]
name = "examples"
version = "0.1.0"
description = ""
authors = [
    {name = "Larry Ogrodnek", email = "ogrodnek@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "pyview-web @ file://../",
    "aiohttp>=3.10.11",
    "pillow>=10.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "black==24.3.0",
    "pyright==1.1.400",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pyright]
exclude = [
    ".venv",
    "examples/.venv", # Adjusted to be relative to the examples directory
    "**/vendor",
    "**/node_modules",
    "**/__pycache__",
]
