[tool.poetry]
name = "examples"
version = "0.1.0"
description = ""
authors = ["Larry Ogrodnek <ogrodnek@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
pyview-web = {path = "..", develop = true}
uvicorn = "^0.38.0"
aiohttp = "^3.12.14"
pillow = "^10.4.0"
psutil = "^7.0.0"
certifi = "^2025.11.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "24.3.0"
pyright = "1.1.403"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pyright]
exclude = [
    ".venv",
    "examples",
    "examples/.venv",
    "**/vendor",
    "**/node_modules",
    "**/__pycache__",
]
