[project]
name = "examples"
version = "0.1.0"
description = ""
authors = [{ name = "Larry Ogrodnek", email = "ogrodnek@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<3.15"

dependencies = [
    "pyview-web",
    "uvicorn>=0.38.0,<0.39",
    "aiohttp>=3.12.14,<4",
    "pillow>=10.4.0,<11",
    "psutil>=7.0.0,<8",
    "certifi>=2025.11.12",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0,<9",
    "black==24.3.0",
    "pyright==1.1.403",
]

[tool.uv]
package = false

[tool.uv.sources]
pyview-web = { path = "..", editable = true }

[tool.pyright]
exclude = [
    ".venv",
    "examples",
    "examples/.venv",
    "**/vendor",
    "**/node_modules",
    "**/__pycache__",
]
